--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "autoprefixer": "^10.4.8",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "jquery": "^3.6.0",
+    "jquery-ui": "^1.13.2",
     "path": "^0.12.7",
-    "postcss": "^8.4.14",
+    "postcss": "^8.4.16",
     "postcss-cli": "^10.0.0",
     "request-promise": "^4.2.6",
-    "tailwindcss": "^3.1.7"
+    "tailwindcss": "^3.1.8"
   }
 }
